--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
         run: |
           sudo apt-get update && sudo apt install vagrant -y
           vagrant --version
-          vagrant validate
+          cd Simple && vagrant validate
